code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_159.wast
(assert_invalid
  (module (func $type-param-void-vs-num
    (block (param i32) (drop))
  ))
  "type mismatch"
)